--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.6.5",
     "hammerjs": "^2.0.8",
     "jquery": "1.9.1 - 3",
+    "moment": "^2.24.0",
     "popper.js": "^1.14.7",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
